--- a/backend/.env
+++ b/backend/.env
@@ -6,7 +6,7 @@ JWT_SECRET=your_secret_key
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=jakesputhussery@gmail.com
-SMTP_PASS=ltoa ecqf sscj dzsr
+SMTP_PASS=
 
 
 
